--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["clsx", "Lalezar", "Lato", "ROSEJHH", "tailwindcss"]
+  "cSpell.words": [
+    "clsx",
+    "Lalezar",
+    "Lato",
+    "ROSEJH",
+    "ROSEJHH",
+    "tailwindcss"
+  ]
 }
