--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "graphql-request": "^5.1.0",
     "isbot": "^3.6.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-player": "^2.12.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.2.2",
